--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,4 @@
-<h5 class = "mx-auto" >Ask your coach anything:</h5>
+<p class = "mx-auto" >Ask your coach anything:</p>
 
 <form action="answer" data-turbo="false">
   <input class="form-control w-25 mb-2" type="text" name="answer">
